[gd_scene load_steps=21 format=3 uid="uid://b3gm7sxksqnuw"]

[ext_resource type="Texture2D" uid="uid://dthm7erast5i8" path="res://levels/shop/FURRET.png" id="1_j6m2x"]
[ext_resource type="Script" path="res://levels/shop/shop_keeper.gd" id="1_qaxcw"]
[ext_resource type="Texture2D" uid="uid://dx3qtu1o2tj3i" path="res://GUI/Menu Elements/GUI Frame.png" id="2_jujlh"]
[ext_resource type="AudioStream" uid="uid://7e2l80pmxjey" path="res://levels/shop/PurchaseSuccessful.wav" id="2_k2v7u"]
[ext_resource type="AudioStream" uid="uid://cii8fk264ocld" path="res://levels/shop/NotEnough.wav" id="3_7ftvg"]
[ext_resource type="Script" path="res://levels/shop/shop_ui.gd" id="3_gf81n"]
[ext_resource type="Texture2D" uid="uid://bnc6uurl7dify" path="res://levels/shop/BetterPowerupTornado-removebg-preview.png" id="3_uwiw7"]
[ext_resource type="FontFile" uid="uid://bu88cy3qpatw8" path="res://GUI/fonts/m5x7.ttf" id="6_oab1r"]
[ext_resource type="Script" path="res://levels/shop/chargeattackbutton.gd" id="7_e8830"]
[ext_resource type="FontFile" uid="uid://cn53iv8alumhv" path="res://GUI/fonts/Quinquefive-ALoRM.ttf" id="10_a3jk2"]
[ext_resource type="Texture2D" uid="uid://b8u81esafods4" path="res://Items/sprites/icons/16x16/crystal_01d.png" id="11_c6b4u"]
[ext_resource type="Texture2D" uid="uid://cwf4qxkur76un" path="res://GUI/Menu Elements/hearts/Cuore1.png" id="11_ftyfh"]
[ext_resource type="Script" path="res://levels/shop/health_button.gd" id="12_ktiuj"]
[ext_resource type="Texture2D" uid="uid://4jwhr7emjr6n" path="res://Player/parry/PARRYYYY.png" id="13_xjysa"]
[ext_resource type="Script" path="res://levels/shop/ParryButton.gd" id="14_kofrw"]
[ext_resource type="Texture2D" uid="uid://cyetqssorq6cq" path="res://levels/shop/Fere't stand.png" id="14_teuvt"]
[ext_resource type="Texture2D" uid="uid://ce1qpkxefu4j0" path="res://levels/shop/upgrade_sign.png" id="15_cv0s5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s81q5"]
size = Vector2(92.5, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24jqo"]
size = Vector2(97.75, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yakhi"]
size = Vector2(14, 73)

[node name="Shop" type="Node2D"]
script = ExtResource("1_qaxcw")
success_sound = ExtResource("2_k2v7u")
fail_sound = ExtResource("3_7ftvg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -31)
scale = Vector2(0.13702, 0.13702)
texture = ExtResource("1_j6m2x")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-8, 1)
shape = SubResource("RectangleShape2D_s81q5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShopUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gf81n")

[node name="Background" type="TextureRect" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 51.0
scale = Vector2(4.37352, 4.37352)
texture = ExtResource("2_jujlh")

[node name="Background2" type="TextureRect" parent="CanvasLayer/ShopUI"]
modulate = Color(0.404684, 0.230203, 0.00076783, 1)
layout_mode = 0
offset_left = 181.0
offset_top = 134.0
offset_right = 221.0
offset_bottom = 185.0
scale = Vector2(5.48577, 1.56046)
texture = ExtResource("2_jujlh")

[node name="ItemList" type="VBoxContainer" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 17.0
offset_top = 17.0
offset_right = 108.0
offset_bottom = 129.0
scale = Vector2(1.23681, 1.23681)

[node name="ChargeAttackButton" type="Button" parent="CanvasLayer/ShopUI/ItemList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oab1r")
text = " Tornado"
icon = ExtResource("3_uwiw7")
script = ExtResource("7_e8830")

[node name="Name" type="Label" parent="CanvasLayer/ShopUI/ItemList/ChargeAttackButton"]
layout_mode = 0
offset_left = -29.1071
offset_top = -38.001
offset_right = 10.8929
offset_bottom = -15.001
theme_override_fonts/font = ExtResource("6_oab1r")
autowrap_mode = 2

[node name="Cost" type="Label" parent="CanvasLayer/ShopUI/ItemList/ChargeAttackButton"]
layout_mode = 0
offset_left = 93.7897
offset_top = 21.0218
offset_right = 117.79
offset_bottom = 35.0218
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_a3jk2")
theme_override_font_sizes/font_size = 9
text = "10"

[node name="HealthButton" type="Button" parent="CanvasLayer/ShopUI/ItemList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oab1r")
text = " Health"
icon = ExtResource("11_ftyfh")
script = ExtResource("12_ktiuj")

[node name="Name" type="Label" parent="CanvasLayer/ShopUI/ItemList/HealthButton"]
layout_mode = 0
offset_left = -29.1071
offset_top = -38.001
offset_right = 10.8929
offset_bottom = -15.001
theme_override_fonts/font = ExtResource("6_oab1r")
autowrap_mode = 2

[node name="Cost" type="Label" parent="CanvasLayer/ShopUI/ItemList/HealthButton"]
layout_mode = 0
offset_left = 93.7897
offset_top = 11.7887
offset_right = 117.79
offset_bottom = 25.7887
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_a3jk2")
theme_override_font_sizes/font_size = 9
text = "15"

[node name="ParryButton" type="Button" parent="CanvasLayer/ShopUI/ItemList"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oab1r")
text = " Parry"
icon = ExtResource("13_xjysa")
script = ExtResource("14_kofrw")

[node name="Name" type="Label" parent="CanvasLayer/ShopUI/ItemList/ParryButton"]
layout_mode = 0
offset_left = -29.1071
offset_top = -38.001
offset_right = 10.8929
offset_bottom = -15.001
theme_override_fonts/font = ExtResource("6_oab1r")
autowrap_mode = 2

[node name="Cost" type="Label" parent="CanvasLayer/ShopUI/ItemList/ParryButton"]
layout_mode = 0
offset_left = 93.7897
offset_top = 11.7887
offset_right = 117.79
offset_bottom = 25.7887
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_a3jk2")
theme_override_font_sizes/font_size = 9
text = "15"

[node name="Description" type="Label" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 200.0
offset_top = 142.0
offset_right = 383.0
offset_bottom = 206.0
theme_override_fonts/font = ExtResource("6_oab1r")
theme_override_font_sizes/font_size = 19
text = "Upgrade Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 138.0
offset_top = 23.0
offset_right = 178.0
offset_bottom = 63.0
scale = Vector2(0.446027, 0.446027)
texture = ExtResource("11_c6b4u")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 138.0
offset_top = 70.0
offset_right = 178.0
offset_bottom = 110.0
scale = Vector2(0.446027, 0.446027)
texture = ExtResource("11_c6b4u")

[node name="GemCounter" type="Label" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 14.0
offset_top = 183.0
offset_right = 54.0
offset_bottom = 206.0
theme_override_fonts/font = ExtResource("10_a3jk2")
theme_override_font_sizes/font_size = 9

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-7.875, -36.5)
shape = SubResource("RectangleShape2D_24jqo")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-98, -25.5)
shape = SubResource("RectangleShape2D_yakhi")

[node name="Fere\'tStand" type="Sprite2D" parent="."]
position = Vector2(-11, -40)
scale = Vector2(2.08014, 2.08014)
texture = ExtResource("14_teuvt")

[node name="UpgradeSign" type="Sprite2D" parent="."]
position = Vector2(-98, -53)
scale = Vector2(2.29451, 2.29451)
texture = ExtResource("15_cv0s5")
